--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
 <title>Redirect to Misha's Blog</title>
-<meta http-equiv="refresh" content="1; URL=https://mul118.github.io/public">
+<meta http-equiv="refresh" content="1; URL=https://mul118-blog.netlify.com">
 <meta name="keywords" content="automatic redirection">
 </head>
